# AudioVideoStudy

./: audio.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dingmouren/audiovideostudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  RecordBuffer.cpp  RecordBuffer.h  native-lib.cpp
app/src/main/java/com/dingmouren/audiovideostudy/: AudioRecorder.java  MainActivity.java
app/src/main/java/com/dingmouren/audiovideostudy/audio/: AudioRecordActivity.java  AudioRecordManager.java  AudioTrackManager.java  OpenSLActivity.java
app/src/main/java/com/dingmouren/audiovideostudy/audio/androidapi/: AudioRecordManager.java  AudioTrackManager.java
app/src/main/java/com/dingmouren/audiovideostudy/audio/exception/: AudioConfigurationException.java  AudioStartRecordingException.java
app/src/main/res/layout/: activity_audio_record.xml  activity_main.xml  activity_opensl.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/dingmouren/audiovideostudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
